error_utf8.log
node : file:///C:/Users
/Asus/OneDrive/Document
s/personal%20finance%20
app/backend/src/prismaC
lient.js:1
At line:1 char:1
+ node src/server.js > 
error.log 2>&1
+ ~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~
    + CategoryInfo     
         : NotSpecifi  
  ed: (file:///C:/Us   
 er...ismaClient.js    
:1:String) [], Rem    
oteException
    + FullyQualifiedEr 
   rorId : NativeComm  
  andError
 
import { PrismaClient 
} from 
'@prisma/client';
         ^^^^^^^^^^^^
SyntaxError: The 
requested module 
'@prisma/client' does 
not provide an export 
named 'PrismaClient'
    at 
#asyncInstantiate (node
:internal/modules/esm/m
odule_job:319:21)
    at async 
ModuleJob.run (node:int
ernal/modules/esm/modul
e_job:422:5)
    at async onImport.t
racePromise.__proto__ (
node:internal/modules/e
sm/loader:661:26)
    at async asyncRunEn
tryPointWithESMLoader (
node:internal/modules/r
un_main:101:5)

Node.js v24.14.0
